--- a/portfolio.html
+++ b/portfolio.html
@@ -1,106 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
-     <style>
-        li {
-            list-style-type: none;
-        }
-    </style>
+
 </head>
 
 <body>
+    <!-- ==========HEADER========== -->
     <header class="header">
         <div class="container">
+            <!-- =============HEADER-NAVIGATION============= -->
             <nav class="site-nav">
-                <a href="./index.html" class="logo"><span class="accent-logo">Web</span>Studio</a>
-                <ul>
-                    <li><a href="./index.html" class="link">Студия</a></li>
-                    <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                    <li><a href="" class="link">Контакты</a></li>
+                <a class="header-logo link" href="./index.html"><span class="accent-logo">Web</span>Studio</a>
+                <ul class="site-nav-list list">
+                    <li class="site-nav-list-item"><a href="./index.html" class="site-nav-list-link link">Студия</a>
+                    </li>
+                    <li class="site-nav-list-item"><a href="./portfolio.html"
+                            class="site-nav-list-link link current">Портфолио</a>
+                    </li>
+                    <li class="site-nav-list-item"><a href="" class="site-nav-list-link link">Контакты</a></li>
                 </ul>
             </nav>
-            <!--contacts-->
+            <!--=============HEADER-CONTACTS-NAV=================-->
             <div>
-            <ul class="contacts-nav">
-                <li class="e-mail" lang="en"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li class="telephone"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-            </ul>
+                <ul class="contacts-nav list">
+                    <li class="contacts-nav-item" lang="en"><a class="contacts-nav-link link"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="contacts-nav-item"><a class="contacts-nav-link link" href="tel:+380961111111">+38 096 111
+                            11
+                            11</a></li>
+                </ul>
             </div>
         </div>
     </header>
 
-    
     <main class="portfolio-page">
         <div class="container">
-        <!-- фильтр работ aka набор радиокнопок -->
-            <div class="radiobuttons-set">
-            <ul>
-            <li><button class="button" type="button">Все</button></li>
-            <li><button class="button" type="button">Веб-сайты</button></li>
-            <li><button class="button" type="button">Приложения</button></li>
-            <li><button class="button" type="button">Дизайн</button></li>
-            <li><button class="button" type="button">Маркетинг</button></li>
-            </ul>
-            </div>
-
-        <!-- наши работы -->
-            <section class="portfolio-projects">
-            <!-- заголовок спрячется, но добавить aria label -->
-            <h1>Наши работы</h1>
+            <!-- ==============PORTFOLIO-BUTTONS=============== -->
+            <div class="radiobuttons-list">
                 <ul>
-                <li class="project-01"><img src="./img/img_porfolio/img01.jpg" alt="вебсайт Технокряк" width="370">
-                    <h4 class="project-title">Технокряк</h4>
-                    <p class="project-description">Веб-сайт</p></li>
-                <li class="project-02"><img src="./img/img_porfolio/img02.jpg" alt="дизайн постера New Orlean" width="370">
-                    <h4 class="project-title">Постер New Orlean vs Golden Star</h4>
-                    <p class="project-description">Дизайн</p></li>
-                <li class="project-03"><img src="./img/img_porfolio/img03.jpg" alt="приложение ресторана Seafood" width="370">
-                    <h4 class="project-title">Ресторан Seafood</h4>
-                    <p class="project-description">Приложение</p></li>
-                <li class="project-04"><img src="./img/img_porfolio/img04.jpg" alt="маркетинг проекта Prime" width="370">
-                    <h4 class="project-title">Проект Prime</h4>
-                    <p class="project-description">Маркетинг</p></li>
-                <li class="project-05"><img src="./img/img_porfolio/img05.jpg" alt="приложение Boxes" width="370">
-                    <h4 class="project-title">Проект Boxes</h4>
-                    <p class="project-description">Приложение</p></li>
-                <li class="project-06"><img src="./img/img_porfolio/img06.jpg" alt="вебсайт Inspiration" width="370">
-                    <h4 class="project-title">Inspiration has no Borders</h4>
-                    <p class="project-description">Веб-сайт</p></li>
-                <li class="project-07"><img src="./img/img_porfolio/img07.jpg" alt="дизайн издания Limited Edition" width="370">
-                    <h4 class="project-title">Издание Limited Edition</h4>
-                    <p class="project-description">Дизайн</p></li>
-                <li class="project-08"><img src="./img/img_porfolio/img08.jpg" alt="маркетинг проекта LAB" width="370">
-                    <h4 class="project-title">Проект LAB</h4>
-                    <p class="project-description">Маркетинг</p></li>
-                <li class="project-09"><img src="./img/img_porfolio/img09.jpg" alt="приложение Growing Business" width="370">
-                    <h4 class="project-title">Growing Business</h4>
-                    <p class="project-description">Приложение</p></li></ul>
-            </section>
+                    <li class="radiobuttons-list-item"><button class="portfolio-button" type="button">Все</button></li>
+                    <li class="radiobuttons-list-item"><button class="portfolio-button" type="button">Веб-сайты</button>
+                    </li>
+                    <li class="radiobuttons-list-item"><button class="portfolio-button"
+                            type="button">Приложения</button></li>
+                    <li class="radiobuttons-list-item"><button class="portfolio-button" type="button">Дизайн</button>
+                    </li>
+                    <li class="radiobuttons-list-item"><button class="portfolio-button" type="button">Маркетинг</button>
+                    </li>
+                </ul>
+            </div>
         </div>
+
+        <!-- ==============PORTFOLIO-PROJECTS=============== -->
+
+        <section class="portfolio-projects">
+            <div class="container">
+                <!-- заголовок спрячется, но добавить aria label -->
+                <h1 class="portfolio-title">Наши работы</h1>
+                <ul class="portfolio-projects-list list">
+                    <li class="portfolio-projects-list-item"><img class="portfolio-project-photo"
+                            src="./img/img_porfolio/img01.jpg" alt="вебсайт Технокряк" width="370">
+                        <div class="portfolio-project-card-text">
+                            <h4 class="project-title">Технокряк</h4>
+                            <p class="project-description">Веб-сайт</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-projects-list-item"><img class="portfolio-project-photo"
+                            src="./img/img_porfolio/img02.jpg" alt="дизайн постера New Orlean" width="370">
+                        <div class="portfolio-project-card-text">
+                            <h4 class="project-title">Постер New Orlean vs Golden Star</h4>
+                            <p class="project-description">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-projects-list-item"><img class="portfolio-project-photo"
+                            src="./img/img_porfolio/img03.jpg" alt="приложение ресторана Seafood" width="370">
+                        <div class="portfolio-project-card-text">
+                            <h4 class="project-title">Ресторан Seafood</h4>
+                            <p class="project-description">Приложение</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-projects-list-item"><img class="portfolio-project-photo"
+                            src="./img/img_porfolio/img04.jpg" alt="маркетинг проекта Prime" width="370">
+                        <div class="portfolio-project-card-text">
+                            <h4 class="project-title">Проект Prime</h4>
+                            <p class="project-description">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-projects-list-item"><img class="portfolio-project-photo"
+                            src="./img/img_porfolio/img05.jpg" alt="приложение Boxes" width="370">
+                        <div class="portfolio-project-card-text">
+                            <h4 class="project-title">Проект Boxes</h4>
+                            <p class="project-description">Приложение</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-projects-list-item"><img class="portfolio-project-photo"
+                            src="./img/img_porfolio/img06.jpg" alt="вебсайт Inspiration" width="370">
+                        <div class="portfolio-project-card-text">
+                            <h4 class="project-title">Inspiration has no Borders</h4>
+                            <p class="project-description">Веб-сайт</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-projects-list-item"><img class="portfolio-project-photo"
+                            src="./img/img_porfolio/img07.jpg" alt="дизайн издания Limited Edition" width="370">
+                        <div class="portfolio-project-card-text">
+                            <h4 class="project-title">Издание Limited Edition</h4>
+                            <p class="project-description">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-projects-list-item"><img class="portfolio-project-photo"
+                            src="./img/img_porfolio/img08.jpg" alt="маркетинг проекта LAB" width="370">
+                        <div class="portfolio-project-card-text">
+                            <h4 class="project-title">Проект LAB</h4>
+                            <p class="project-description">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-projects-list-item"><img class="portfolio-project-photo"
+                            src="./img/img_porfolio/img09.jpg" alt="приложение Growing Business" width="370">
+                        <div class="portfolio-project-card-text">
+                            <h4 class="project-title">Growing Business</h4>
+                            <p class="project-description">Приложение</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
+
+    <!-- ==========FOOTER============== -->
 
     <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="footer-logo"><span class="accent-logo">Web</span>Studio</a>
+            <a class="footer-logo link" href="./index.html"><span class="accent-logo">Web</span>Studio</a>
             <address lang="ru">
-                <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383859"
-                    class="footer-address">г.Киев
+                <a class="footer-address link"
+                    href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383859">г.Киев
                     пр-т Леси Украинки, 26</a>
             </address>
-            <ul class="footer-links">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            <ul class="footer-links list">
+                <li class="footer-links-item"><a class="footer-links-link link"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="footer-links-item"><a class="footer-links-link link" href="tel:+380961111111">+38 096 111 11
+                        11</a></li>
             </ul>
         </div>
     </footer>
 </body>
+
 </html>
